<resources>
    <string name="app_name">StoryApp</string>
    <string name="images_splashscreen">Splash Screen</string>
    <string name="karyacipta">App By Tama</string>
    <string name="maps">Maps</string>
    <string name="logout">Logout</string>
    <string name="decs_login">Gambar Login</string>
    <string name="tv_login">Masuk Akun</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_account">Tambah Akun</string>
    <string name="story">Cerita</string>
    <string name="img_item">Cerita Gambar</string>
    <string name="detail_story">Detail Cerita</string>
    <string name="save_data">Data Tersimpan</string>
    <string name="tv_desc">Deskripsi</string>
    <string name="date">Tanggal</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galery</string>
    <string name="upload">Unggah</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="success">Berhasil Menggunggah</string>
    <string name="pengenalan">Kisahmu Disini!</string>
    <string name="havent_account">Belum mempunyai akun?</string>
    <string name="click">Klik</string>
    <string name="name">Nama</string>
    <string name="tv_register">Buat Akun</string>
    <string name="desc_main">Yuk Saatnya berbagi cerita</string>
    <string name="sixLetter">Minimal 6 karakter </string>
    <string name="input_gambar">Silakan masukkan gambar dahulu.</string>
    <string name="permission">Tidak mendapatkan izin.</string>
    <string name="cant_call_image">Gagal mendapatkan gambar.</string>
    <string name="cant_show_camera">Gagal menampilkan kamera.</string>
    <string name="must_be_filled">Diisi terlebih dahulu.</string>
    <string name="setting">Pengaturan</string>
    <string name="date_format">04 Nov 2022 | 14:30</string>
    <string name="eror_email">Email address tidak valid</string>
    <string name="image_add_story">Tambah Gambar Cerita</string>
    <string name="image_camera">Gambar Kamera</string>
    <string name="image_story">Gambar Cerita</string>
    <string name="image_login">Gambar Login</string>
    <string name="image_main">Gambar Main</string>
    <string name="image_register">Gambar Daftar</string>
    <string name="image_splashscreen">Layar Splash</string>
    <string name="fab_add">Tambah Fab</string>
    <string name="double_press_to_exit">Klik untuk keluar</string>
    <string name="title_activity_maps"> Peta Activity</string>
    <string name="retry">Ulangi</string>
    <string name="bars_stories">Story Bar</string>
</resources>