<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.finalsubmission.dicoding.ui.LoginActivity">

    <ImageView
        android:id="@+id/icon_logo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:contentDescription="@string/decs_login"
        android:src="@drawable/launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tview_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:textSize="24sp"
        android:text="@string/tv_login"
        android:textColor="@color/green"
        android:alpha="0"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/email"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tview_login"
        app:layout_constraintTop_toBottomOf="@+id/tview_login"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

        <com.finalsubmission.dicoding.component.MyEdittextEmail
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/input_layout1"
        app:layout_constraintStart_toStartOf="@+id/input_layout1"
        app:layout_constraintTop_toBottomOf="@+id/input_layout1"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

        <com.finalsubmission.dicoding.component.MyEdittextEmail
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tview_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/havent_account"
        android:textColor="@color/green"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="@+id/input_layout2"
        app:layout_constraintTop_toBottomOf="@+id/input_layout2" />

    <TextView
        android:id="@+id/tview_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/click"
        android:textColor="@color/orange"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ask"
        app:layout_constraintStart_toEndOf="@+id/tv_ask"
        app:layout_constraintTop_toTopOf="@+id/tv_ask"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/abel"
        android:text="@string/login"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/input_layout2"
        app:layout_constraintTop_toBottomOf="@+id/input_layout2" />

    <ProgressBar
        android:id="@+id/bars"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>